[gd_scene load_steps=4 format=3 uid="uid://ship_dock_uid"]

[ext_resource type="Script" path="res://scripts/gameplay/trawler/ship_dock.gd" id="1_dock"]
[ext_resource type="Texture2D" uid="uid://btyw6bsgsr1vg" path="res://assets/art/player/player.png" id="2_sprite"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_interact"]
size = Vector2(32, 32)

[node name="ShipDock" type="Node2D"]
script = ExtResource("1_dock")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.5, 0.5, 0.5, 0.5)
texture = ExtResource("2_sprite")

[node name="DockMarker" type="Marker2D" parent="."]

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 4
monitoring = true
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("RectangleShape2D_interact")

